@@ -7,6 +7,7 @@ v1.3 - Pending
 	+ Ignore "the" when sorting library in artist/album views (holy_robot)
 	+ Better logic when sorting playlists and new "dir+file" sort option (sed)
 	+ Allow saving/overwriting existing playlists and streams
+	+ Hidden config options to set browser, hide column headers
 	+ Update license to GNU GPLv3
 	+ Bug: Fix nl.po translation causing crash
 	+ Bug: Remember playlist position when adding from library
